Fix modal layout to work better on small screens (closes #68).

--- a/src/bootstrap_custom_variables.scss
+++ b/src/bootstrap_custom_variables.scss
@@ -17,6 +17,16 @@ $form-switch-width: 2.5em;
     color: var(--bs-dark);
   }
 }
+.modal,
+.modal-dialog,
+.modal-content {
+  display: flex !important;
+  flex-direction: column;
+  min-height: 0;
+}
+.modal-body {
+  overflow-y: auto;
+}
 
 :root {
   --bs-primary-darkened: #{darken($primary, 20%)};
